# flutter-stft-fft-plugin

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
docs/: STFT_FFT_AMPLITUDE_CONVENTION.md  test_results_v0.0.2.md
ios/: flutter_stft_fft_plugin.podspec
ios/Classes/: stft_fft_plugin.c
lib/: stft_fft_plugin.dart
lib/src/: stft_fft_plugin_bindings.dart
src/: CMakeLists.txt  fft_engine.c  signal_helpers.c  signal_helpers.h  stft_fft_plugin.c  stft_fft_plugin.h  stft_pipeline.c  welch_method.c
test/: CMakeLists.txt  test_fft_engine.c  test_signal_helpers.c  test_stft_pipeline.c  test_welch_method.c
